# plasma-phone-components

./: .gitignore  CMakeLists.txt  README.md  plasma-phone.pro  script.sh
applets/: CMakeLists.txt
components/: HomeScreenControls.qml
containments/homescreen/: CMakeLists.txt  applicationlistmodel.cpp  applicationlistmodel.h  basemodel.cpp  basemodel.h  basemodel_p.h  homescreen.cpp  homescreen.h  launcheritem.cpp  launcheritem.h  listmodelmanager.cpp  listmodelmanager.h  negativemodel.cpp  negativemodel.h  type.h  wallpapermanager.cpp  wallpapermanager.h
containments/homescreen/package/contents/ui/: ConfigOverlay.qml  main.qml
containments/homescreen/package/contents/ui/launcher/: Clock.qml  Delegate.qml  HoverRectangle.qml  ImageRadius.qml  JingLauncher.qml  LauncherContainer.qml  LauncherDragManager.qml  LauncherGrid.qml  MediaPlayer.qml  NegativeFilesView.qml  NegativeView.qml  NoteView.qml
containments/homescreen/service/: systeminfo.service  systeminfodump
containments/panel/: CMakeLists.txt  hotkeysmanager.cpp  hotkeysmanager.h  mediamanager.cpp  mediamanager.h  phonepanel.cpp  phonepanel.h
containments/panel/package/contents/applet/: CompactApplet.qml
containments/panel/package/contents/ui/: DrawerBackground.qml  FullContainer.qml  SlidingPanel.qml  SlidingPanelNotification.qml  main.qml
containments/panel/package/contents/ui/indicators/: AlarmClock.qml  Battery.qml  Bluetooth.qml  FlightMode.qml  Headset.qml  Indicator.qml  Location.qml  Mute.qml  Rotate.qml  SignalStrength.qml  Udisk.qml  VPN.qml  Volume.qml  Wifi.qml
containments/panel/package/contents/ui/quicksettings/: BigBtnDelegate.qml  Delegate.qml  MediaControl.qml  MediaPlayer.qml  QuickNotificationList.qml  QuickSettings.qml  SliderBtnDelegate.qml  StateDelegate.qml
containments/panel/package/contents/ui/quicksettings/jingos/: JingButton.qml  JingIconButton.qml  PrivateMouseHover.qml
containments/taskpanel/: CMakeLists.txt  Messages.sh  eventfilter.cpp  eventfilter.h  taskpanel.cpp  taskpanel.h
debian/: changelog  control  copyright  plasma-phone-components.postinst  rules
po/ast/: plasma_applet_org.kde.phone.activities.po  plasma_applet_org.kde.phone.krunner.po
po/ca/: plasma_applet_org.kde.phone.activities.po  plasma_applet_org.kde.phone.homescreen.po  plasma_applet_org.kde.phone.krunner.po  plasma_applet_org.kde.phone.panel.po  plasma_shell_org.kde.plasma.phone.po
po/ca@valencia/: plasma_applet_org.kde.phone.activities.po  plasma_applet_org.kde.phone.homescreen.po  plasma_applet_org.kde.phone.krunner.po  plasma_applet_org.kde.phone.panel.po  plasma_shell_org.kde.plasma.phone.po
po/cs/: plasma_applet_org.kde.phone.activities.po  plasma_applet_org.kde.phone.homescreen.po  plasma_applet_org.kde.phone.krunner.po  plasma_applet_org.kde.phone.panel.po  plasma_shell_org.kde.plasma.phone.po
po/da/: plasma_applet_org.kde.phone.activities.po  plasma_applet_org.kde.phone.homescreen.po  plasma_applet_org.kde.phone.panel.po  plasma_shell_org.kde.plasma.phone.po
po/de/: plasma_applet_org.kde.phone.activities.po  plasma_applet_org.kde.phone.homescreen.po  plasma_applet_org.kde.phone.krunner.po  plasma_applet_org.kde.phone.panel.po  plasma_shell_org.kde.plasma.phone.po
po/en_GB/: plasma_applet_org.kde.phone.activities.po  plasma_applet_org.kde.phone.homescreen.po  plasma_applet_org.kde.phone.krunner.po  plasma_applet_org.kde.phone.panel.po  plasma_shell_org.kde.plasma.phone.po
po/es/: plasma_applet_org.kde.phone.activities.po  plasma_applet_org.kde.phone.homescreen.po  plasma_applet_org.kde.phone.krunner.po  plasma_applet_org.kde.phone.panel.po  plasma_shell_org.kde.plasma.phone.po
po/et/: plasma_applet_org.kde.phone.activities.po  plasma_applet_org.kde.phone.homescreen.po  plasma_applet_org.kde.phone.krunner.po  plasma_applet_org.kde.phone.panel.po  plasma_shell_org.kde.plasma.phone.po
po/eu/: plasma_applet_org.kde.phone.activities.po  plasma_applet_org.kde.phone.homescreen.po  plasma_applet_org.kde.phone.krunner.po  plasma_applet_org.kde.phone.panel.po  plasma_shell_org.kde.plasma.phone.po
po/fi/: plasma_applet_org.kde.phone.activities.po  plasma_applet_org.kde.phone.homescreen.po  plasma_applet_org.kde.phone.krunner.po  plasma_applet_org.kde.phone.panel.po  plasma_shell_org.kde.plasma.phone.po
po/fr/: plasma_applet_org.kde.phone.activities.po  plasma_applet_org.kde.phone.homescreen.po  plasma_applet_org.kde.phone.krunner.po  plasma_applet_org.kde.phone.panel.po  plasma_shell_org.kde.plasma.phone.po
po/gl/: plasma_applet_org.kde.phone.activities.po  plasma_applet_org.kde.phone.homescreen.po
po/hi/: plasma_applet_org.kde.phone.krunner.po
po/hu/: plasma_applet_org.kde.phone.activities.po  plasma_applet_org.kde.phone.homescreen.po  plasma_applet_org.kde.phone.krunner.po  plasma_applet_org.kde.phone.panel.po  plasma_shell_org.kde.plasma.phone.po
po/ia/: plasma_applet_org.kde.phone.activities.po  plasma_applet_org.kde.phone.homescreen.po  plasma_applet_org.kde.phone.krunner.po  plasma_applet_org.kde.phone.panel.po  plasma_shell_org.kde.plasma.phone.po
po/id/: plasma_applet_org.kde.phone.activities.po  plasma_applet_org.kde.phone.homescreen.po  plasma_applet_org.kde.phone.krunner.po  plasma_applet_org.kde.phone.panel.po  plasma_shell_org.kde.plasma.phone.po
po/it/: plasma_applet_org.kde.phone.activities.po  plasma_applet_org.kde.phone.homescreen.po  plasma_applet_org.kde.phone.krunner.po  plasma_applet_org.kde.phone.panel.po  plasma_shell_org.kde.plasma.phone.po
po/ko/: plasma_applet_org.kde.phone.activities.po  plasma_applet_org.kde.phone.homescreen.po  plasma_applet_org.kde.phone.krunner.po  plasma_applet_org.kde.phone.panel.po  plasma_shell_org.kde.plasma.phone.po
po/lt/: plasma_applet_org.kde.phone.activities.po  plasma_applet_org.kde.phone.homescreen.po  plasma_applet_org.kde.phone.krunner.po  plasma_applet_org.kde.phone.panel.po  plasma_shell_org.kde.plasma.phone.po
po/nl/: plasma_applet_org.kde.phone.activities.po  plasma_applet_org.kde.phone.homescreen.po  plasma_applet_org.kde.phone.krunner.po  (+2 more)
shell/: metadata.desktop
touchscreentest/: main.cpp  main.qml
(+113 files in other folders)
